# Poker

./: LICENSE.md  Poker.cabal  README.md
src/: Poker.hs
test/: Spec.hs
