name:                Poker
version:             0.1.0.0
synopsis:            Mini module for evaluating Poker hands
description:         Please see README.md
homepage:            https://github.com/rmalecki/Poker#readme
license:             BSD3
license-file:        LICENSE
author:              Rouven Malecki
maintainer:          mail@rouvenmalecki.net
copyright:           2016 Rouven Malecki
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Poker
  build-depends:       base >= 4.7 && < 5
                     , random
  default-language:    Haskell2010

test-suite Poker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , random
                     , Poker
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rmalecki/Poker
